templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-express-app-service
  namespace: argolab
spec:
  ports:
    - port: 3030
      targetPort: 3000
      protocol: TCP
  selector:
    name: test-express-app
