templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-express-app-ingress
  namespace: argolab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: labs.video-mint.net
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: test-express-app-service
              port:
                number: 3000
